feat: adding avatar crud
